# esi-pf-app

./: .gitignore  README.md  app.bat  app.py  app.vbs  main.spec  pyproject.toml
HNG/: calculate.py  verification.py
config/: state_manager.py
pages/: 0_Home.py  1_ESI_PF_Calculator.py  2_IFSC_Checker.py
resources/: MC_Template_scl_june_2025.xlsx
somany/: calculate.py  verification.py
src/features/esi_pf_challan/: __init__.py
src/features/esi_pf_challan/HNG/: calculate.py
src/features/esi_pf_challan/Somany/: calculate.py
src/features/esi_pf_challan/helpers/: save_output.py
src/features/ifsc_checker/: __init__.py  main.py
