[project]
name = "esi-pf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "html5lib>=1.1",
    "lxml>=6.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "streamlit>=1.48.0",
    "tabulate>=0.9.0",
    "xlsxwriter>=3.2.5",
]
